# realtime-sign-language-recognition

./: BackgroundRemover.h  DoxyConfig  Doxyfile  LICENSE  Makefile  README.md  SkinDetector.h  VideoCapture Test.cpp  detection_test  detection_test.cpp  references.txt  webcam_detection
Linux Version/: Makefile  handGesture.cpp  handGesture.hpp  main.cpp  opencv  roi.cpp
PC-version/: CMakeLists.txt  FrameGen.hpp  InterHand.hpp  Makefile  RecogModel.h  kNOw_SIGN  roi.hpp
docs/: _config.yml  about.markdown  asldnn.markdown  classdiag.markdown  handdet.markdown  hardware.markdown  home.markdown  index.markdown  journey.markdown  oled.markdown  realtime.markdown  requirements.markdown  seqdiagram.markdown  software.markdown  sourcecode.markdown  specifications.markdown  stories.markdown  sysdesign.markdown  system.markdown
html/: FrameGen_8cpp.html  FrameGen_8cpp__incl.map  FrameGen_8hpp.html  FrameGen_8hpp__dep__incl.map  FrameGen_8hpp__dep__incl.md5  FrameGen_8hpp_source.html  InterHand_8hpp.html  InterHand_8hpp__dep__incl.map  InterHand_8hpp__dep__incl.md5  InterHand_8hpp_source.html  RecogModel_8h.html  RecogModel_8h__dep__incl.map  RecogModel_8h__dep__incl.md5  RecogModel_8h_source.html  (+95 more)
src/: CMakeCache.txt  CMakeLists.txt  FrameGen.cpp  FrameGen.hpp  InterHand.cpp  InterHand.hpp  Makefile  RecogModel.cpp  RecogModel.h  ThreadSafeFramesQueue.hpp  cmake_install.cmake  handDetect.cpp  handDetect.h  handGesture.cpp  handGesture.hpp  kNOw_SIGN  led_display.cpp  led_display.hpp  main.cpp  main.hpp  main_thread.cpp  myImage.cpp  myImage.hpp  opencv  roi.cpp  roi.hpp
(+252 files in other folders)
