cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
project( kNOw_SIGN )
find_package(OpenCV REQUIRED )
find_package(Threads REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( kNOw_SIGN main_thread.cpp handDetect.cpp RecogModel.cpp FrameGen.cpp InterHand.cpp roi.cpp)
target_link_libraries( kNOw_SIGN ${OpenCV_LIBS} Threads::Threads)
